[Windows] Many CSS2.1 tests fail under NRWT. https://bugs.webkit.org/show_bug.cgi?id=75707

Patch by Brent Fulgham <bfulgham@webkit.org> on 2013-05-28
Reviewed by Darin Adler.

* DumpRenderTree/win/DumpRenderTree.cpp:
(findFontFallback): Added
(addFontFallbackIfPresent): Added
(removeFontFallbackIfPresent): Added
(runTest): Set up/remove font fallbacks when needed.


Canonical link: https://commits.webkit.org/135193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150851 268f45cc-cd09-0410-ab3c-d52691b4dbfc